// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`click submit button calls onSubmit prop 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -97,11 +97,11 @@
              \\"paddingVertical\\": 6,
            },
          ]
        }
        underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-       value=\\"test\\"
+       value=\\"\\"
      />
    </View>
    <View
      accessible={true}
      focusable={true}
@@ -118,9 +118,9 @@
        }
      }
      testID=\\"SubmitButton\\"
    >
      <SvgMock
-       color=\\"#3CC8E6\\"
+       color=\\"#ECEEF2\\"
      />
    </View>
  </RCTSafeAreaView>"
`;

exports[`click submit button calls onSubmit prop fails 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`handles start edit 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -9,44 +9,82 @@
      }
    }
  >
    <View
      style={
-       Array [
        Object {
-           \\"alignItems\\": \\"center\\",
-           \\"justifyContent\\": \\"center\\",
-         },
-         Array [
+         \\"backgroundColor\\": \\"#B4B6BA\\",
+         \\"borderRadius\\": 25,
+       }
+     }
+   >
+     <View
+       accessible={true}
+       focusable={true}
+       onClick={[Function onClick]}
+       onResponderGrant={[Function onResponderGrant]}
+       onResponderMove={[Function onResponderMove]}
+       onResponderRelease={[Function onResponderRelease]}
+       onResponderTerminate={[Function onResponderTerminate]}
+       onResponderTerminationRequest={[Function onResponderTerminationRequest]}
+       onStartShouldSetResponder={[Function onStartShouldSetResponder]}
+       style={
          Object {
-             \\"borderRadius\\": 18,
-             \\"height\\": 36,
-             \\"width\\": 36,
-           },
+           \\"opacity\\": 1,
+         }
+       }
+       testID=\\"IconButton\\"
+     >
+       <View
+         style={
+           Array [
              Object {
-             \\"backgroundColor\\": \\"#B4B6BA\\",
+               \\"backgroundColor\\": \\"transparent\\",
              },
-           undefined,
-         ],
+             null,
+             Object {},
+             null,
            ]
          }
        >
          <Text
+           allowFontScaling={false}
            style={
              Array [
                Object {
+                 \\"color\\": undefined,
+                 \\"fontSize\\": 12,
+               },
+               Array [
+                 Object {
                    \\"color\\": \\"#ffffff\\",
                  },
                  Object {
-             \\"fontSize\\": 20,
-             \\"fontWeight\\": \\"300\\",
+                   \\"fontSize\\": 16,
+                 },
+                 Array [
+                   Object {
+                     \\"margin\\": 10,
+                   },
+                   Object {
+                     \\"color\\": \\"#ffffff\\",
+                   },
+                 ],
+               ],
+               Object {
+                 \\"fontFamily\\": \\"icomoon\\",
+                 \\"fontStyle\\": \\"normal\\",
+                 \\"fontWeight\\": \\"normal\\",
                },
+               Object {},
              ]
            }
          >
-       
+           
          </Text>
+       </View>
+     </View>
    </View>
    <View
      style={
        Object {
          \\"backgroundColor\\": \\"#ECEEF2\\",
@@ -97,11 +135,11 @@
              \\"paddingVertical\\": 6,
            },
          ]
        }
        underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-       value=\\"\\"
+       value=\\"esse repellat quisquam\\"
      />
    </View>
    <View
      accessible={true}
      focusable={true}
@@ -118,9 +156,9 @@
        }
      }
      testID=\\"SubmitButton\\"
    >
      <SvgMock
-       color=\\"#ECEEF2\\"
+       color=\\"#3CC8E6\\"
      />
    </View>
  </RCTSafeAreaView>"
`;

exports[`renders with disabled submit button 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -97,11 +97,11 @@
              \\"paddingVertical\\": 6,
            },
          ]
        }
        underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-       value=\\"test\\"
+       value=\\"\\"
      />
    </View>
    <View
      accessible={true}
      focusable={true}
@@ -118,9 +118,9 @@
        }
      }
      testID=\\"SubmitButton\\"
    >
      <SvgMock
-       color=\\"#3CC8E6\\"
+       color=\\"#ECEEF2\\"
      />
    </View>
  </RCTSafeAreaView>"
`;

exports[`renders with text entered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -97,11 +97,11 @@
              \\"paddingVertical\\": 6,
            },
          ]
        }
        underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-       value=\\"\\"
+       value=\\"test\\"
      />
    </View>
    <View
      accessible={true}
      focusable={true}
@@ -118,9 +118,9 @@
        }
      }
      testID=\\"SubmitButton\\"
    >
      <SvgMock
-       color=\\"#ECEEF2\\"
+       color=\\"#3CC8E6\\"
      />
    </View>
  </RCTSafeAreaView>"
`;

exports[`renders without actions 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 12,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Array [
          Object {
            "borderRadius": 18,
            "height": 36,
            "width": 36,
          },
          Object {
            "backgroundColor": "#B4B6BA",
          },
          undefined,
        ],
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
          },
          Object {
            "fontSize": 20,
            "fontWeight": "300",
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "borderRadius": 8,
        "flex": 1,
        "marginHorizontal": 8,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={true}
      autoFocus={false}
      blurOnSubmit={true}
      multiline={false}
      onChangeText={[Function]}
      onSubmitEditing={[Function]}
      placeholder="Placeholder"
      placeholderTextColor="#B4B6BA"
      rejectResponderTermination={true}
      returnKeyType="done"
      selectionColor="#005A7F"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderBottomColor": "#3CC8E6",
            "borderBottomWidth": 1,
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": 0.25,
            "lineHeight": 24,
            "paddingVertical": 5,
          },
          Object {
            "borderBottomWidth": 0,
            "color": "#505256",
            "flex": 1,
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 20,
            "paddingHorizontal": 12,
            "paddingVertical": 6,
          },
        ]
      }
      underlineColorAndroid="rgba(0,0,0,0)"
      value=""
    />
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="SubmitButton"
  >
    <SvgMock
      color="#ECEEF2"
    />
  </View>
</RCTSafeAreaView>
`;
